# Projekt-PSiO

./: .gitignore  CMakeLists.txt  Config.h  Entities.cpp  Entities.h  Game.cpp  Game.h  GameObject.h  Player.cpp  Player.h  PowerUps.cpp  PowerUps.h  ReadMe.txt  main.cpp
